# interactive-table

./: README.md  pyproject.toml
examples/: data_table.ipynb  table_app.ipynb
src/interactive_table/: __init__.py  traitlet_utils.py  v_badge_toggle.py  v_dataframe_filter.py  v_dialog.py  v_interactive_table.py  v_range_filter.py
src/interactive_table/templates/: RangeSliderInput.vue
src/vTableApp/: __init__.py  v_autocomplete.py  v_badge_toggle.py  v_bounded_input.py  v_bounded_slider.py  v_data_table.py  v_dataframe_filter.py  v_dialog.py  v_menu.py  v_range_filter.py  v_row_edit_dialog.py  v_selection_filter.py  v_table_app.py  v_table_display.py
src/vTableApp/templates/: BoundedInput.vue  RangeSliderInput.vue
vTableApp/: traitlet_utils.py  v_autocomplete.py  v_bounded_float_field.py  v_bounded_number_field.py  v_callbacks_button.py  v_checkable_expansion_panel.py  v_content_with_sidebar.py  v_dataframe_filter.py  v_dialog.py  v_range_filter.py  v_row_edit_dialog.py  v_selection_filter.py  v_table_app.py  v_table_display.py  v_verbose_range_slider.py
